<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <Button
        android:id="@+id/button_open_market_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activityMain_button_open_market_main_text" />

    <Button
        android:id="@+id/button_open_market_catalog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activityMain_button_open_market_catalog_text" />


    <Button
        android:id="@+id/button_open_market_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activityMain_button_open_market_map_text" />


    <Button
        android:id="@+id/button_open_market_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activityMain_button_open_market_search_text" />


    <Button
        android:id="@+id/button_open_market_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/activityMain_button_open_market_account_text" />



</LinearLayout>